--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "webpack4",
+  "sideEffects": [
+    "./src/some-side-effectful-file.js",
+    "*.css"
+  ],
   "version": "1.0.0",
   "description": "",
   "private": true,
