--- a/package.json
+++ b/package.json
@@ -6,21 +6,27 @@
   ],
   "version": "1.0.0",
   "description": "",
-  "private": true,
+  "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack-dev-server --open --config webpack.dev.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "zzb",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^2.1.0",
+    "css-loader": "^2.1.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "lodash": "^4.17.11"
+    "clean-webpack-plugin": "^2.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.11",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack-dev-server": "^3.2.1"
   }
 }
