--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
+    "clean-webpack-plugin": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.11"
   }
